<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="text_nano_degree_app">My Nanodegree Apps!</string>
    <string name="text_app_button_spotify">Spotify Streamer</string>
    <string name="text_app_button_scores">Scores App</string>
    <string name="text_app_button_library">Library App</string>
    <string name="text_app_button_bigger">Build It Bigger</string>
    <string name="text_app_button_xyz">XYZ Reader</string>
    <string name="text_app_button_capstone">Capstone: My own app</string>
</resources>
