<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:weightSum="14"
              tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/text_nano_degree_app"
        android:textColor="@android:color/black"
        android:textSize="17sp"/>

    <Button
        android:id="@+id/buttonSpotify"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/text_app_button_spotify"/>

    <Button
        android:id="@+id/buttonScores"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/text_app_button_scores"/>


    <Button
        android:id="@+id/buttonLibrary"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/text_app_button_library"/>

    <Button
        android:id="@+id/buttonBigger"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/text_app_button_bigger"/>

    <Button
        android:id="@+id/buttonXYZ"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/text_app_button_xyz"/>

    <Button
        android:id="@+id/buttonCapstone"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@android:color/holo_red_dark"
        android:text="@string/text_app_button_capstone"
        android:textColor="@android:color/white"/>

</LinearLayout>
